# customers-talking

./: .env.example  .firebaserc  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  VOICE_API_GUIDE.md  VOICE_IMPLEMENTATION.md  cloudbuild.yaml  docker-entrypoint.sh  firebase.json  justfile  update_dialogflow_agent.sh
.github/workflows/: firebase-deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
client/: .gitignore  angular.json  components.json  package-lock.json  package.json  tsconfig.json
client/public/: env.example.js
client/src/: env.ts  index.html  styles.css  styles.scss
client/src/app/: app.html  app.routes.ts  app.ts  auth-client.ts
client/src/app/guards/: auth.guard.ts
client/src/app/interceptors/: auth.interceptor.ts
client/src/app/pages/escalations/: escalations.html  escalations.ts
client/src/app/pages/handoff-monitor/: handoff-monitor.html  handoff-monitor.ts
client/src/app/pages/landing/: landing.html  landing.ts
client/src/app/services/: auth.service.ts  escalated-session.ts  sessions.service.ts  solutions.service.ts  theme.service.ts
client/src/environments/: environment.prod.ts
server/: .env.example  =2.31.0  =2.34.0  Dockerfile  main.py  pyproject.toml
server/app/: __init__.py  auth_middleware.py  config.py  db.py
server/app/models/: __init__.py  session.py
server/app/routes/: __init__.py  auth.py  sessions.py  sms.py  solutions.py  ussd.py  voice.py
server/app/services/: __init__.py  africastalking_service.py  audio_service.py  dialogflow_service.py  human_queue.py  session_store.py  solutions_store.py
(+16 files in other folders)
